2001-08-23  Karl Eichwalder  <ke@suse.de>

	* gettext.texi (Main PO Commands): Reflect po-mode.el key binding
	changes.
	(Translated Entries): Likewise.
	(Fuzzy Entries): Likewise.
	(Untranslated Entries): Likewise.
	(Obsolete Entries): Likewise.
	(Auxiliary): Likewise.

2001-11-07  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (Smalltalk): Update from
	Paolo Bonzini <bonzini@gnu.org>.

2001-11-05  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (Aspects): Write "German" instead of "French", since
	the french number formatting rules are different.
	Reported by Mark Hoebeke <mh@jouy.inra.fr>.

2001-11-01  Bruno Haible  <haible@clisp.cons.org>

	* matrix.texi: Update.
	* nls.texi (STATUS): Likewise.

2001-10-30  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (EXTRA_DIST): Add texi2html.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (Header Entry): The language-team address can be an
	URL instead of an email address.
	(Plural forms): Gaeilge is also known as Irish.
	(src/Makefile): No need to put libsupport.a into LIBS twice.
	(Java): Add more documentation.
	(Pascal): Likewise.
	(YCP): Likewise.
	(RST): Update.

2001-10-19  Bruno Haible  <haible@clisp.cons.org>

	* texi2html: New file, from texi2html-1.52 with modifications.
	* Makefile.am (TEXI2HTML): Use @PERL@, not @TEXI2HTML@.
	(gettext_toc.html): Update accordingly.

2001-10-11  Bruno Haible  <haible@clisp.cons.org>

	* msgattrib.texi: New file.
	* msgcat.texi: New file.
	* msgcmp.texi: New file.
	* msgcomm.texi: New file.
	* msgconv.texi: New file.
	* msgen.texi: New file.
	* msgexec.texi: New file.
	* msgfmt.texi: New file, partially from node "msgfmt Invocation".
	* msggrep.texi: New file.
	* msginit.texi: New file.
	* msgmerge.texi: New file.
	* msgunfmt.texi: New file.
	* msguniq.texi: New file.
	* xgettext.texi: New file, partially from node "xgettext Invocation".
	* gettext.texi (Top): Add a fourth author.