@@ -5,11 +5,10 @@ projectsdir="$1"
 progdir="$2"
 catalog="$3"  # e.g. "pt_BR"
 language="$4" # e.g. "pt"
-verbose="$5"
 
 for project in `cat "$projectsdir/index"`; do
   if /bin/sh "$projectsdir/$project/trigger"; then
-    /bin/sh "$projectsdir/$project/team-address" "$projectsdir" "$progdir" "$catalog" "$language" "$verbose"
+    /bin/sh "$projectsdir/$project/team-address" "$projectsdir" "$progdir" "$catalog" "$language"
     exit $?
   fi
 done
